# CMWallet

./: .gitignore  README.md  settings.gradle.kts
matcher/: CMakeLists.txt  Makefile  base64.c  base64.h  credentialmanager.h  dcql.c  dcql.h  index.md  openid4vp1_0.c  openid4vp1_0.wasm  test_plan.md  test_runner.cc  testharness.c
matcher-rs/: Cargo.toml  build.rs  build.sh
matcher-rs/src/: bindings.rs  credman.rs  issuance.rs  issuance_matcher.rs  lib.rs  openid4vci.rs  openid4vp.rs  openid4vp_models.rs
matcher-rs/testdata/: TC07_MdocMatch_expected.json  TC07_MdocMatch_request.json  TC08_MdocMismatch_expected.json  TC08_MdocMismatch_request.json  TC09_SdjwtMatch_expected.json  TC09_SdjwtMatch_request.json  TC10_SdjwtMismatch_expected.json  TC10_SdjwtMismatch_request.json  TC11_InlineIssuanceFallback_expected.json  TC11_InlineIssuanceFallback_request.json  TC12_MissingFormat_expected.json  TC12_MissingFormat_request.json  TC13_ReturnAllClaims_expected.json  TC13_ReturnAllClaims_request.json  TC14_MatchSpecificClaims_expected.json  TC14_MatchSpecificClaims_request.json  TC15_MatchNestedClaims_expected.json  TC15_MatchNestedClaims_request.json  TC16_FailMissingClaims_expected.json  TC16_FailMissingClaims_request.json  TC17_MatchClaimValuesBool_expected.json  TC17_MatchClaimValuesBool_request.json  TC18_FailClaimValuesBool_expected.json  TC18_FailClaimValuesBool_request.json  TC19_MatchClaimValuesInt_expected.json  TC19_MatchClaimValuesInt_request.json  TC20_FailClaimValuesInt_expected.json  TC20_FailClaimValuesInt_request.json  TC21_MatchFirstClaimSet_expected.json  TC21_MatchFirstClaimSet_request.json  TC22_MatchSecondClaimSet_expected.json  TC22_MatchSecondClaimSet_request.json  TC23_FailAllClaimSets_expected.json  TC23_FailAllClaimSets_request.json  (+34 more)
matcher/pnv/: dcql.c  (+1 more)
(+48 files in other folders)
